--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -4,20 +4,45 @@
   {{error}}
 </div>
 
-<h4>Create New Game</h4>
+<h4>Host a New Game</h4>
 <form (submit)="onNewGameSubmit()">
   <div>
     <label for="newGameWord">Word:</label>
     <input type="text" name="newGameWord" [(ngModel)]="newGameWord">
   </div>
+  <div>
+    <label for="newGameHint">Hint:</label>
+    <input type="text" name="newGameHint" [(ngModel)]="newGameHint">
+  </div>
   <input type="submit" value="New Game">
 </form>
 
-<h4>Join an Existing Game</h4>
-<form (submit)="onJoinGameSubmit()">
+<div class="games">
+  <h4>Active Games You're Hosting/Playing:</h4>
+  <div *ngFor="let game of activeGames; let i = index">
+    <div *ngIf="game.host._id == user._id || game.player._id == user._id">
+      <a [routerLink]="['/game', game._id]">
+        {{i + 1}}) by {{game.host.username}} - (Hint: {{game.hint}})
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- <h4>Join an Existing Game</h4> -->
+<!-- <form (submit)="onJoinGameSubmit()">
   <div>
     <label for="gameId">ID:</label>
     <input type="text" name="gameId" [(ngModel)]="gameId">
   </div>
   <input type="submit" value="Join Game">
-</form>
+</form> -->
+<div class="games">
+  <h4>Active Games You Can Join:</h4>
+  <div *ngFor="let game of activeGames; let i = index">
+    <div *ngIf="game.host._id != user._id && !game.player">
+      <a [routerLink]="['/game', game._id]">
+        {{i + 1}}) by {{game.host.username}} - (Hint: {{game.hint}})
+      </a>
+    </div>
+  </div>
+</div>
