--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -1,3 +1,57 @@
 <p>
   Game: {{game._id}}
 </p>
+
+<div class="game">
+
+  <h1>Host: {{game.host.username}}</h1>
+  <h2 *ngIf="game.player">Player: {{game.player.username}}</h2>
+  <h2 *ngIf="!game.player">Player: waiting...</h2>
+
+  <h2>Burn Level: {{game.burnLevel}}</h2>
+  <h2>Active: {{game.status}}</h2>
+
+  <div class="result">
+    <h2 *ngIf="game.win">{{game.player.name}} Won!</h2>
+    <h2 *ngIf="!game.win && !game.status">{{game.player.name}} Lost!</h2>
+  </div>
+
+  <div class="box">
+    <h4>The Word</h4>
+    <p *ngIf="game.host._id == user._id">(Only you can see this: {{game.word}})</p>
+    <h1 *ngFor="let l of game.word.split('')" class="word-letter">
+      <span *ngIf="game.guesses.indexOf(l) > -1; else dash">{{l}}</span>
+      <ng-template #dash>__</ng-template>
+    </h1>
+  </div>
+
+  <div class="box">
+    <h4>Guesses</h4>
+    <span *ngFor="let guess of game.guesses" class="guess">
+      {{guess}}
+    </span>
+  </div>
+
+  <div class="box">
+    <h4>Misses</h4>
+    <span *ngFor="let miss of game.misses" class="miss">
+      {{miss}}
+    </span>
+  </div>
+
+  <!-- TODO: disable after one guess is sent until all updates are recieved -->
+  <div *ngIf="game.host._id != user._id && game.status">
+    <input type="text" minlength="1" maxlength="1" [(ngModel)]="guess">
+    <button (click)="sendGuess()">Guess</button>
+  </div>
+
+
+  <!-- <div class="man">
+    <div class="fire one"></div>
+    <img src="assets/img/fire1.gif">
+    <img src="assets/img/fire2.gif">
+    <img src="assets/img/fire3.jpg">
+    <img src="assets/img/fire4.jpg">
+  </div> -->
+
+</div>
