--- a/client/src/app/log-reg/log-reg.component.html
+++ b/client/src/app/log-reg/log-reg.component.html
@@ -1,12 +1,12 @@
 <div class="center">
-    <h1 class="welcome">Welcome.</h1>
+    <h1 class="welcome">Welcome to Burning Man</h1>
 </div>
 <div class="error">
     {{error}}
 </div>
 <div class="columns">
     <div class="column" id="registration">
-        <h1>Registration</h1>
+        <h2>Registration</h2>
         <form (submit)="onRegisterSubmit()">
             <div>
                 <label for="regUser.name">Name:</label>
@@ -28,7 +28,7 @@
         </form>
     </div>
     <div class="column" id="login">
-        <h1>Login</h1>
+        <h2>Login</h2>
         <form (submit)="onLoginSubmit()">
             <div>
                 <label for="logUser.username">Username:</label>
