--- a/client/src/app/game/game.component.html
+++ b/client/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <div class="page game">
-  <h2>Host: {{game.host.username}}</h2>
-  <h2 *ngIf="game.player">Player: {{game.player.username}}</h2>
+  <h2>Host: {{game.host.name}}</h2>
+  <h2 *ngIf="game.player">Player: {{game.player.name}}</h2>
   <h2 *ngIf="!game.player">Player: waiting...</h2>
 
   <div class="column stats">
