--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -14,6 +14,9 @@ html {
     border-left: 2px solid orangered;
     padding: 5px 0;
 }
+.center {
+    text-align: center;
+}
 .page {
     padding: 0 20px;
     /* text-align: center; */
